turtleart.star.Star.scala.error
Erreur de compilation :
Star:7: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
  droite()
        ^